# lutece-website

./: .env.example  .gitignore  docker-compose.prod.yml
.github/workflows/: deploy.yml  test.yml
audit/: AUDIT_REPORT.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/admin/: articles.py  auth.py
backend/app/api/public/: articles.py  contacts.py  services.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: article.py  user.py
backend/app/schemas/: article.py  auth.py
backend/tests/: test_api.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  icon.tsx  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/app/about/: page.tsx
frontend/src/app/blog/: page.tsx
frontend/src/app/blog/[slug]/: page.tsx
frontend/src/app/contact/: ContactForm.tsx  page.tsx
frontend/src/app/services/: page.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/ui/terminal/: AsciiSeparator.tsx  BlinkCursor.tsx  CommandButton.tsx  PromptLine.tsx  TerminalBox.tsx
infra/terraform/: cloud-init.sh  main.tf  terraform.tfvars.example  variables.tf
nginx/conf.d/: lutece-consulting.com.conf
scripts/: seed_db.py
